--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -1,17 +1,28 @@
-<!DOCTYPE html>
+
 
 <html>
 	<head>
-		<title></title>
+		<title>Assignment 4 - Home Page</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="styles.css" rel="stylesheet">
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-		<script src="js/bootstrap.js"></script>
+		
 	</head>
 	
 	<body>
+		<ul class="nav nav-tabs">
+			<li role="presentation" class="active"><a href="#">Home</a></li>
+			<li role="presentation"><a href="#">Profile</a></li>
+			<li role="presentation"><a href="#">Messages</a></li>
+		</ul>
+		
+		<h1>Test</h1>
+	
+	
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		
 	
 	</body>
 
