Added first 3 columns

--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -7,21 +7,40 @@
 		
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="styles.css" rel="stylesheet">
-		
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	</head>
 	
 	<body>
 		<ul class="nav nav-tabs">
 			<li role="presentation" class="active"><a href="#">Home</a></li>
-			<li role="presentation"><a href="#">Profile</a></li>
-			<li role="presentation"><a href="#">Messages</a></li>
+			<li role="presentation"><a href="#">About</a></li>
+			<li role="presentation"><a href="#">Contact Form</a></li>
 		</ul>
 		
-		<h1>Test</h1>
+		<div class="container-fluid">
+			<h1>Assignment 4</h1>
+			<p>This web page is a sample bootstrap page made for CIS 411 at the University of Louisville.</p>
+		</div>
+		
+		<div class="row">
+			<div class="col-sm-4">
+			<h2>CIS 100</h1>
+			<p>This is the first basic CIS class required. It is called Introduction to Microcomputer Applications.</p>
+			</div>
+			<div class="col-sm-4">
+			<h2>CIS 150</h2>
+			<p>This is basically an ethics course for CIS. It is called Fundamentals of Information Systems.</p>
+			</div>
+			<div class="col-sm-4">
+			<h2>CIS 199</h2>
+			<p>This is an introductory programming class using C#. It is called Software Development I.</p>
+			</div>
+		</div>
 	
-	
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
+
+		
 		
 	
 	</body>
