Navigation bar works across pages
Also finished basic column layout for index page

--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 
 <html>
 	<head>
@@ -14,9 +14,9 @@
 	
 	<body>
 		<ul class="nav nav-tabs">
-			<li role="presentation" class="active"><a href="#">Home</a></li>
-			<li role="presentation"><a href="#">About</a></li>
-			<li role="presentation"><a href="#">Contact Form</a></li>
+			<li role="presentation" class="active"><a href="index.html">Home</a></li>
+			<li role="presentation"><a href="about.html">About</a></li>
+			<li role="presentation"><a href="contact.html">Contact Form</a></li>
 		</ul>
 		
 		<div class="container-fluid">
@@ -28,18 +28,37 @@
 			<div class="col-sm-4">
 			<h2>CIS 100</h1>
 			<p>This is the first basic CIS class required. It is called Introduction to Microcomputer Applications.</p>
+			<a href="http://htmlaccess.louisville.edu/CrseCatalog/crseDescription.cfm?crseid=012662&career=UGRD&term=4152&section=01&location=BELKNAP" class="btn btn-info" role="button">View Class</a>
 			</div>
 			<div class="col-sm-4">
 			<h2>CIS 150</h2>
 			<p>This is basically an ethics course for CIS. It is called Fundamentals of Information Systems.</p>
+			<a href="http://htmlaccess.louisville.edu/CrseCatalog/crseDescription.cfm?crseid=015110&career=UGRD&term=4152&section=01&location=BELKNAP" class="btn btn-info" role="button">View Class</a>
 			</div>
 			<div class="col-sm-4">
 			<h2>CIS 199</h2>
 			<p>This is an introductory programming class using C#. It is called Software Development I.</p>
+			<a href="http://htmlaccess.louisville.edu/CrseCatalog/crseDescription.cfm?crseid=014213&career=UGRD&term=4152&section=01&location=BELKNAP" class="btn btn-info" role="button">View Class</a>
 			</div>
 		</div>
 	
-
+		<div class="row">
+			<div class="col-sm-4">
+			<h2>CIS 200</h1>
+			<p>This is the more advanced programming class using C#. It is called Software Development II.</p>
+			<a href="http://htmlaccess.louisville.edu/CrseCatalog/crseDescription.cfm?crseid=014214&career=UGRD&term=4152&section=01&location=BELKNAP" class="btn btn-info" role="button">View Class</a>
+			</div>
+			<div class="col-sm-4">
+			<h2>CIS 300</h2>
+			<p>This is a more advanced version of CIS 100. It is called Computer Information Systems.</p>
+			<a href="http://htmlaccess.louisville.edu/CrseCatalog/crseDescription.cfm?crseid=004608&career=UGRD&term=4152&section=01&location=BELKNAP" class="btn btn-info" role="button">View Class</a>
+			</div>
+			<div class="col-sm-4">
+			<h2>CIS 310</h2>
+			<p>This is a database programming and designing class. It is called Database Design.</p>
+			<a href="http://htmlaccess.louisville.edu/CrseCatalog/crseDescription.cfm?crseid=004609&career=UGRD&term=4152&section=01&location=BELKNAP" class="btn btn-info" role="button">View Class</a>
+			</div>
+		</div>
 		
 		
 	
