Basic setup for contact and about pages

--- a/assignment4/about.html
+++ b/assignment4/about.html
@@ -19,6 +19,27 @@
 			<li role="presentation"><a href="contact.html">Contact Form</a></li>
 		</ul>
 		
+		<div class="container-fluid">
+			<h1>About Page</h1>
+		</div>
+		
+		<div class="row">
+			<div class="col-sm-4">
+			<h2>CIS 320</h1>
+			<p>This is a class that deals with requirement gathering and planning a project. It is called Systems Analysis and Design.</p>
+			<a href="http://htmlaccess.louisville.edu/CrseCatalog/crseDescription.cfm?crseid=004611&career=UGRD&term=4152&section=01&location=BELKNAP" class="btn btn-info" role="button">View Class</a>
+			</div>
+			<div class="col-sm-4">
+			<h2>CIS 350</h2>
+			<p>This class covers computer architecture and specifics. It is called Infrastructure Technologies.</p>
+			<a href="http://htmlaccess.louisville.edu/CrseCatalog/crseDescription.cfm?crseid=015111&career=UGRD&term=4152&section=01&location=BELKNAP" class="btn btn-info" role="button">View Class</a>
+			</div>
+			<div class="col-sm-4">
+			<h2>CIS 410</h2>
+			<p>This class helps with analysis and resource planning of IT projects. It is called Management of Information Systems.</p>
+			<a href="http://htmlaccess.louisville.edu/CrseCatalog/crseDescription.cfm?crseid=004615&career=UGRD&term=4152&section=01&location=BELKNAP" class="btn btn-info" role="button">View Class</a>
+			</div>
+		</div>
 		
 	</body>
 	
