--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -19,10 +19,11 @@
 			<li role="presentation"><a href="contact.html">Contact Form</a></li>
 		</ul>
 		
+		<div class="jumbotron">
 		<div class="container-fluid">
 			<h1>Assignment 4</h1>
 			<p>This web page is a sample bootstrap page made for CIS 411 at the University of Louisville.</p>
-		</div>
+		</div></div>
 		
 		<div class="row">
 			<div class="col-sm-4">
