Updated Contact and About pages

--- a/assignment4/about.html
+++ b/assignment4/about.html
@@ -37,10 +37,18 @@
 			<div class="col-sm-4">
 			<h2>CIS 410</h2>
 			<p>This class helps with analysis and resource planning of IT projects. It is called Management of Information Systems.</p>
-			<a href="http://htmlaccess.louisville.edu/CrseCatalog/crseDescription.cfm?crseid=004615&career=UGRD&term=4152&section=01&location=BELKNAP" class="btn btn-info" role="button">View Class</a>
+			<a href="http://htmlaccess.louisville.edu/CrseCatalog/crseDescription.cfm?crseid=004609&career=UGRD&term=4152&section=01&location=BELKNAP" class="btn btn-info" role="button">View Class</a>
 			</div>
 		</div>
-		
+		<br><br>
+		<div class="row">
+			<div class="col-sm-8">
+				<p>Lorem ipsum dolor sit amet, mauris a duis nulla arcu fusce suspendisse, condimentum donec, nulla lacus, turpis quam sit turpis odio, non eget. Nec eget lacinia risus, ultricies aliquam nunc augue, eget wisi rhoncus pede felis adipiscing, wisi amet penatibus conubia magna. Pulvinar dictum justo aenean, massa et eu amet risus libero, ante ut est lobortis, aenean porta. Eu platea odio, cum odio aliquet tempus. Orci erat nascetur ac integer et, aenean class vel amet vel. Pellentesque mi viverra neque et lectus, justo erat litora vehicula phasellus. Quam risus lectus, feugiat augue.</p>
+			</div>
+			<div class="col-sm-4">
+				<p><b>Other classes not listed:</b><br> CIS 411, CIS 420, CIS 483, CIS 484</p>
+			</div>
+	
 	</body>
 	
 </html>
