--- a/assignment4/contact.html
+++ b/assignment4/contact.html
@@ -21,24 +21,26 @@
 		
 		<form role="form">
 			<div class="form-group">
-			<label for="name">Name:</label>
-			<input type="name" class="form-control" id="name">
+				<label for="name">Name:</label>
+				<input type="name" class="form-control" id="name">
 			</div>
 			<div class="form-group">
-			<label for="email">Email:</label>
-			<input type="email" class="form-control" id="email">
-			</div>
-			<div  class="form-group">
-			<label for="url">URL</label>
-			<input type="url" class="form-control" id="url">
+				<label for="email">Email:</label>
+				<input type="email" class="form-control" id="email">
 			</div>
 			<div class="form-group">
-			<label for="comment">Comment:</label>
-			<textarea class="form-control" rows="5" id="comment">
-			</textarea>
+				<label for="url">URL:</label>
+				<input type="url" class="form-control" id="url">
 			</div>
-			<button type="submit" class="btn btn-default">Submit</button>
+			<div class="form-group">
+				<label for="comment">Comment:</label>
+				<textarea class="form-control" rows="5" id="comment"></textarea>
+			</div><br>
+				<button type="submit" class="btn btn-default">Submit</button>
+				<a href="index.html" class="btn btn-default" role="button">Cancel</button>
+			
 		</form>
+
 		
 		
 	</body>
