--- a/assignment4/contact.html
+++ b/assignment4/contact.html
@@ -13,7 +13,7 @@
 	</head>
 
 	<body>
-		<ul class="nav nav-tabs">
+		<ul class="nav nav-tabs navbar-inverse">
 			<li role="presentation"><a href="index.html">Home</a></li>
 			<li role="presentation"><a href="about.html">About</a></li>
 			<li role="presentation" class="active"><a href="contact.html">Contact Form</a></li>
@@ -37,7 +37,8 @@
 				<textarea class="form-control" rows="5" id="comment"></textarea>
 			</div><br>
 				<button type="submit" class="btn btn-default">Submit</button>
-				<a href="index.html" class="btn btn-default" role="button">Cancel</button>
+				<a href="index.html" class="btn btn-default" role="button">
+				<span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
 			
 		</form>
 
