--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -13,7 +13,7 @@
 	</head>
 	
 	<body>
-		<ul class="nav nav-tabs">
+		<ul class="nav nav-tabs navbar-inverse">
 			<li role="presentation" class="active"><a href="index.html">Home</a></li>
 			<li role="presentation"><a href="about.html">About</a></li>
 			<li role="presentation"><a href="contact.html">Contact Form</a></li>
