Changed file structure

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		
 		<div class="jumbotron">
 		<div class="container-fluid">
-			<h1>Assignment 4</h1>
+			<h1>Assignment 4 - Evan Neises</h1>
 			<p>This web page is a sample bootstrap page made for CIS 411 at the University of Louisville.</p>
 		</div></div>
 		
