Added new files

--- a/contact.html
+++ b/contact.html
@@ -2,48 +2,38 @@
 
 <html>
 	<head>
-		<title>Assignment 4 - Contact Form</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Homepage</title>
 		
-		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<link href="styles.css" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
+		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<!-- Latest compiled JavaScript -->
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+	
 	</head>
-
+	
 	<body>
-		<ul class="nav nav-tabs navbar-inverse">
-			<li role="presentation"><a href="index.html">Home</a></li>
-			<li role="presentation"><a href="about.html">About</a></li>
-			<li role="presentation" class="active"><a href="contact.html">Contact Form</a></li>
-		</ul>
+		<nav class="navbar navbar-default">
+		  <div class="container-fluid">
+		    <div class="navbar-header">
+		      <a class="navbar-brand" href="#">Evan Neises</a>
+		    </div>
+		    <div>
+		      <ul class="nav navbar-nav">
+		        <li><a href="index.html">Home</a></li>
+		        <li><a href="about.html">About Me</a></li>
+		        <li class="active"><a href="contact.html">Contact</a></li>
+		        <li><a href="#">Links</a></li>
+		      </ul>
+		    </div>
+		  </div>
+		</nav>
 		
-		<form role="form">
-			<div class="form-group">
-				<label for="name">Name:</label>
-				<input type="name" class="form-control" id="name">
-			</div>
-			<div class="form-group">
-				<label for="email">Email:</label>
-				<input type="email" class="form-control" id="email">
-			</div>
-			<div class="form-group">
-				<label for="url">URL:</label>
-				<input type="url" class="form-control" id="url">
-			</div>
-			<div class="form-group">
-				<label for="comment">Comment:</label>
-				<textarea class="form-control" rows="5" id="comment"></textarea>
-			</div><br>
-				<button type="submit" class="btn btn-default">Submit</button>
-				<a href="index.html" class="btn btn-default" role="button">
-				<span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-			
-		</form>
-
+		<h1>Contact Me</h1>
 		
 		
 	</body>
 	
+
 </html>
