--- a/about.html
+++ b/about.html
@@ -2,53 +2,38 @@
 
 <html>
 	<head>
-		<title>Assignment 4 - About Page</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Homepage</title>
 		
-		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<link href="styles.css" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
+		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<!-- Latest compiled JavaScript -->
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-	</head>
-
-	<body>
-		<ul class="nav nav-tabs navbar-inverse">
-			<li role="presentation"><a href="index.html">Home</a></li>
-			<li role="presentation" class="active"><a href="about.html">About</a></li>
-			<li role="presentation"><a href="contact.html">Contact Form</a></li>
-		</ul>
-		
-		<div class="container-fluid">
-			<h1>About Page</h1>
-		</div>
-		
-		<div class="row">
-			<div class="col-sm-4">
-			<h2>CIS 320</h1>
-			<p>This is a class that deals with requirement gathering and planning a project. It is called Systems Analysis and Design.</p>
-			<a href="http://htmlaccess.louisville.edu/CrseCatalog/crseDescription.cfm?crseid=004611&career=UGRD&term=4152&section=01&location=BELKNAP" class="btn btn-info" role="button">View Class</a>
-			</div>
-			<div class="col-sm-4">
-			<h2>CIS 350</h2>
-			<p>This class covers computer architecture and specifics. It is called Infrastructure Technologies.</p>
-			<a href="http://htmlaccess.louisville.edu/CrseCatalog/crseDescription.cfm?crseid=015111&career=UGRD&term=4152&section=01&location=BELKNAP" class="btn btn-info" role="button">View Class</a>
-			</div>
-			<div class="col-sm-4">
-			<h2>CIS 410</h2>
-			<p>This class helps with analysis and resource planning of IT projects. It is called Management of Information Systems.</p>
-			<a href="http://htmlaccess.louisville.edu/CrseCatalog/crseDescription.cfm?crseid=004609&career=UGRD&term=4152&section=01&location=BELKNAP" class="btn btn-info" role="button">View Class</a>
-			</div>
-		</div>
-		<br><br>
-		<div class="row">
-			<div class="col-sm-8">
-				<p>Lorem ipsum dolor sit amet, mauris a duis nulla arcu fusce suspendisse, condimentum donec, nulla lacus, turpis quam sit turpis odio, non eget. Nec eget lacinia risus, ultricies aliquam nunc augue, eget wisi rhoncus pede felis adipiscing, wisi amet penatibus conubia magna. Pulvinar dictum justo aenean, massa et eu amet risus libero, ante ut est lobortis, aenean porta. Eu platea odio, cum odio aliquet tempus. Orci erat nascetur ac integer et, aenean class vel amet vel. Pellentesque mi viverra neque et lectus, justo erat litora vehicula phasellus. Quam risus lectus, feugiat augue.</p>
-			</div>
-			<div class="col-sm-4">
-				<p><b>Other classes not listed:</b><br> CIS 411, CIS 420, CIS 483, CIS 484</p>
-			</div>
 	
+	</head>
+	
+	<body>
+		<nav class="navbar navbar-default">
+		  <div class="container-fluid">
+		    <div class="navbar-header">
+		      <a class="navbar-brand" href="#">Evan Neises</a>
+		    </div>
+		    <div>
+		      <ul class="nav navbar-nav">
+		        <li><a href="index.html">Home</a></li>
+		        <li class="active"><a href="about.html">About Me</a></li>
+		        <li><a href="contact.html">Contact</a></li>
+		        <li><a href="#">Links</a></li>
+		      </ul>
+		    </div>
+		  </div>
+		</nav>
+		
+		<h1>About Me</h1>
+		
+		
 	</body>
 	
+
 </html>
