--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <header id="header">
 	<div id="head" class="parallax" parallax-speed="2">
 		<h1 id="logo" class="text-center">
-			<img class="img-circle" src="ENeises.jpg" alt="">
+			<img class="img-circle" src="assets/images/ENeises.JPG" alt="">
 			<span class="title">Evan Neises</span>
 			<span class="tagline" style="font-size: 19px;">Software Developer<br>
 		</h1>
