--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<h1 id="logo" class="text-center">
 			<img class="img-circle" src="assets/images/ENeises.JPG" alt="">
 			<span class="title">Evan Neises</span>
-			<span class="tagline" style="font-size: 19px;">Software Developer<br>
+			<span class="tagline" style="font-size: 19px;">Driven Technophile<br>
 		</h1>
 		<div class="text-center">
 			<a href="https://www.linkedin.com/in/evanneises"><i class="fa fa-linkedin fa-2x"></i></a>
@@ -80,10 +80,12 @@
 			<h2 id="about" class="section-title parallax parallax-1"><span>About Me</span></h2>
 			
 			<div class="col-sm-6">
-				I graduated from the University of Louisville on May 10th, 2015 with a Bachelor's of Science in Business Administration with a focus on Computer Information Systems. 
+				- Graduated from the University of Louisville with a Bachelor's of Science in Business Administration with a focus on Computer Information Systems. 			<br><br>
+				- Currently working at Humana as an applications engineer in downtown Louisville, Kentucky.
 			</div>
 			<div class="col-sm-6">
-				I currently work at Humana as an applications engineer in downtown Louisville, Kentucky.
+				As a tech enthusiast, I enjoy exploring and learning about cutting edge technologies.
+				<br><br>Top 5 Strengths: Futuristic, Individualization, Achiever, Competition, and Focus.
 			</div>
 		</div> <!-- / section -->
 		
